--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "start": "node server.cjs"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.5.1"
     },
     "keywords": [],
